--- a/content/dpa/en.mdx
+++ b/content/dpa/en.mdx
@@ -170,6 +170,19 @@ All personal data and health information is stored and processed exclusively wit
 - Analytics: PostHog (EU hosting)
 - Notifications: Novu (EU API endpoint: eu.api.novu.co)
 
+#### A.8.1 Transfer Impact Assessments (TIAs) and Supplementary Measures (Schrems II)
+
+To address risks identified in C‑311/18 (Schrems II), Eleva.care conducts Transfer Impact Assessments for each vendor listed above and implements supplementary measures, including:
+
+- SCCs (2021/914) Module 2 (Controller→Processor) executed with all non-EU vendors providing EU-hosted infrastructure
+- Encryption in transit (TLS 1.3) and at rest (AES‑256‑GCM); encryption keys are managed by Eleva.care within the EU with strict access controls
+- Principle of least privilege, role-based access control, and comprehensive audit logging of administrative access
+- Government access request policy: vendors commit to (i) notify Eleva.care of access requests where lawful, (ii) challenge unlawful or overbroad requests, and (iii) publish transparency reports where applicable
+- No remote vendor support access is permitted without EU-based, time-bound, and logged approvals
+- Data minimization and pseudonymization where feasible for analytics and operational telemetry
+
+Summaries of TIAs and technical/organizational measures can be provided to controllers upon reasonable request under NDA.
+
 ### A.9 Compliance with Healthcare Regulations
 
 **EU Health Data Regulations (Primary):**
