--- a/content/payment-policies/en.mdx
+++ b/content/payment-policies/en.mdx
@@ -25,8 +25,8 @@ When you make a payment through Eleva.care:
 
 **Example**: For a €100 appointment:
 
-- Practitioner receives: €85.00 (after Stripe processing fees)
-- Platform service fee: €15.00 (covers technology, marketing, sales, infrastructure)
+- Practitioner receives: €85.00
+- Platform service fee: €15.00 (covers technology, marketing, sales, infrastructure, and Stripe fees)
 
 The total price displayed at booking includes all fees. No hidden charges.
 
@@ -142,8 +142,8 @@ In cases of system errors or special circumstances:
 
 - Healthcare practitioners are independent professionals receiving payment for their services
 - Payments are processed through Stripe Connect
-- Practitioners receive 85% of the appointment fee (after applicable Stripe processing fees)
-- Eleva.care retains 15% as a platform service fee
+- Practitioners receive 85% of the appointment fee
+- Eleva.care retains 15% as a platform service fee (includes Stripe processing fees)
 - Transfers occur after successful appointment completion
 - Transfer schedule varies by practitioner's settings and local banking requirements
 - All transfers comply with Stripe Connect policies and local regulations
