--- a/content/payment-policies/es.mdx
+++ b/content/payment-policies/es.mdx
@@ -25,8 +25,8 @@ Cuando realiza un pago a través de Eleva.care:
 
 **Ejemplo**: Para una cita de €100:
 
-- El profesional recibe: €85,00 (después de las tarifas de procesamiento de Stripe)
-- Tarifa de servicio de la plataforma: €15,00 (cubre tecnología, marketing, ventas, infraestructura)
+- El profesional recibe: €85,00
+- Tarifa de servicio de la plataforma: €15,00 (cubre tecnología, marketing, ventas, infraestructura y tarifas de Stripe)
 
 El precio total mostrado en la reserva incluye todas las tarifas. Sin cargos ocultos.
 
@@ -142,8 +142,8 @@ En casos de errores del sistema o circunstancias especiales:
 
 - Los profesionales de salud son profesionales independientes que reciben el pago por sus servicios
 - Los pagos se procesan a través de Stripe Connect
-- Los profesionales reciben el 85% de la tarifa de cita (después de las tarifas de procesamiento de Stripe aplicables)
-- Eleva.care retiene el 15% como tarifa de servicio de la plataforma
+- Los profesionales reciben el 85% de la tarifa de cita
+- Eleva.care retiene el 15% como tarifa de servicio de la plataforma (incluye tarifas de procesamiento de Stripe)
 - Las transferencias ocurren después de la finalización exitosa de la cita
 - El calendario de transferencias varía según la configuración del profesional y los requisitos bancarios locales
 - Todas las transferencias cumplen con las políticas de Stripe Connect y las regulaciones locales
