--- a/content/payment-policies/pt.mdx
+++ b/content/payment-policies/pt.mdx
@@ -25,8 +25,8 @@ Quando faz um pagamento através da Eleva.care:
 
 **Exemplo**: Para uma consulta de €100:
 
-- O profissional recebe: €85,00 (após taxas de processamento Stripe)
-- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura)
+- O profissional recebe: €85,00
+- Taxa de serviço da plataforma: €15,00 (cobre tecnologia, marketing, vendas, infraestrutura e taxas do Stripe)
 
 O preço total apresentado na marcação inclui todas as taxas. Sem custos ocultos.
 
@@ -142,8 +142,8 @@ Em casos de erros do sistema ou circunstâncias especiais:
 
 - Os profissionais de saúde são profissionais independentes que recebem pagamento pelos seus serviços
 - Os pagamentos são processados através do Stripe Connect
-- Os profissionais recebem 85% da taxa de consulta (após taxas de processamento Stripe aplicáveis)
-- A Eleva.care retém 15% como taxa de serviço da plataforma
+- Os profissionais recebem 85% da taxa de consulta
+- A Eleva.care retém 15% como taxa de serviço da plataforma (inclui taxas de processamento Stripe)
 - As transferências ocorrem após a conclusão bem-sucedida da consulta
 - O calendário de transferências varia de acordo com as configurações do profissional e requisitos bancários locais
 - Todas as transferências cumprem com as políticas do Stripe Connect e regulamentos locais
