--- a/content/practitioner-agreement/br.mdx
+++ b/content/practitioner-agreement/br.mdx
@@ -261,14 +261,13 @@ Para cada consulta concluída agendada através da Eleva.care:
 
 - **Comissão da Plataforma**: 15% da taxa de sessão
 - **Você recebe**: 85% da taxa de sessão
-- **Processamento de pagamento**: Tratado via Stripe (taxas Stripe separadas)
+- **Processamento de pagamento**: Via Stripe; as taxas do Stripe estão cobertas dentro da comissão de 15% da Eleva.care
 
 **Exemplo**:
 
 - Taxa de sessão: R$500
-- Comissão Eleva.care: R$75 (15%)
-- Taxa de processamento Stripe: ~R$12,50 (2,5%)
-- Seu pagamento líquido: ~R$412,50
+- Comissão Eleva.care (inclui taxas Stripe): R$75 (15%)
+- Seu pagamento: R$425,00
 
 ### 6.2 Cronograma de Pagamentos
 
