--- a/content/practitioner-agreement/en.mdx
+++ b/content/practitioner-agreement/en.mdx
@@ -261,14 +261,13 @@ For each completed appointment booked through Eleva.care:
 
 - **Platform Commission**: 15% of the session fee
 - **You receive**: 85% of the session fee
-- **Payment processing**: Handled via Stripe (Stripe fees separate)
+- **Payment processing**: Via Stripe; Stripe fees are covered within Eleva.care's 15% platform commission
 
 **Example**:
 
 - Session fee: €100
-- Eleva.care commission: €15 (15%)
-- Stripe processing fee: ~€2.50 (2.5%)
-- Your net payout: ~€82.50
+- Eleva.care commission (includes Stripe fees): €15 (15%)
+- Your payout: €85.00
 
 ### 6.2 Payout Schedule
 
