--- a/content/practitioner-agreement/es.mdx
+++ b/content/practitioner-agreement/es.mdx
@@ -261,14 +261,13 @@ Por cada cita completada reservada a través de Eleva.care:
 
 - **Comisión de la Plataforma**: 15% de la tarifa de sesión
 - **Usted recibe**: 85% de la tarifa de sesión
-- **Procesamiento de pagos**: Gestionado vía Stripe (tarifas Stripe separadas)
+- **Procesamiento de pagos**: Vía Stripe; las tarifas de Stripe están cubiertas dentro del 15% de comisión de la plataforma de Eleva.care
 
 **Ejemplo**:
 
 - Tarifa de sesión: €100
-- Comisión Eleva.care: €15 (15%)
-- Tarifa de procesamiento Stripe: ~€2,50 (2,5%)
-- Su pago neto: ~€82,50
+- Comisión Eleva.care (incluye tarifas Stripe): €15 (15%)
+- Su pago: €85,00
 
 ### 6.2 Calendario de Pagos
 
