--- a/content/practitioner-agreement/pt.mdx
+++ b/content/practitioner-agreement/pt.mdx
@@ -261,14 +261,13 @@ Para cada consulta concluída marcada através da Eleva.care:
 
 - **Comissão da Plataforma**: 15% da taxa de sessão
 - **Você recebe**: 85% da taxa de sessão
-- **Processamento de pagamento**: Tratado via Stripe (taxas Stripe separadas)
+- **Processamento de pagamento**: Via Stripe; as taxas do Stripe estão incluídas dentro da comissão de 15% da Eleva.care
 
 **Exemplo**:
 
 - Taxa de sessão: €100
-- Comissão Eleva.care: €15 (15%)
-- Taxa de processamento Stripe: ~€2,50 (2,5%)
-- O seu pagamento líquido: ~€82,50
+- Comissão Eleva.care (inclui taxas Stripe): €15 (15%)
+- O seu pagamento: €85,00
 
 ### 6.2 Cronograma de Pagamentos
 
