--- a/content/privacy/br.mdx
+++ b/content/privacy/br.mdx
@@ -85,7 +85,20 @@ Não vendemos, trocamos ou compartilhamos de outra forma seus dados pessoais com
 
 ## 4. Retenção de Dados
 
-Reteremos seus dados pessoais apenas pelo tempo necessário para cumprir os propósitos descritos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei.
+Conservamos dados apenas pelo tempo necessário para os fins abaixo ou conforme exigido por lei. A retenção varia por categoria de dados:
+
+| Categoria                              | Finalidade                                    | Retenção Típica                                                                      |
+| -------------------------------------- | --------------------------------------------- | ------------------------------------------------------------------------------------ |
+| Dados de conta (nome, email, telefone) | Fornecer e proteger sua conta                 | Enquanto a conta estiver ativa; se inativa: aviso de 12 meses e exclusão em 24 meses |
+| Metadados de agendamentos e reservas   | Manter histórico e resolver incidentes        | 24 meses após a última atividade (salvo obrigações legais)                           |
+| Registros de pagamento e faturamento   | Conformidade fiscal e contábil                | Até 10 anos (legal)                                                                  |
+| Comunicações de suporte                | Resolução de incidentes e trilha de auditoria | 24 meses após o fechamento do ticket                                                 |
+| Analítica de plataforma                | Melhorar produto e confiabilidade             | Até 12 meses (depois agregado/anonimizado)                                           |
+| Registros de auditoria (segurança)     | Investigações de segurança e conformidade     | Mínimo 12 meses                                                                      |
+| Backups                                | Continuidade de negócios e recuperação        | ~30 dias de backups criptografados em rotação                                        |
+| Dados clínicos (notas, anexos)         | Prontuários sob controle do profissional      | Conforme instruções do profissional e a lei aplicável (p. ex., 10 anos em Portugal)  |
+
+Para dados clínicos, o profissional é o Controlador de Dados e determina o período de retenção. Atuamos como Operador e excluiremos ou devolveremos os dados conforme instrução do profissional ou término do contrato, em conformidade com nosso Acordo de Processamento de Dados.
 
 ## 5. Seus Direitos de Proteção de Dados
 
@@ -96,9 +109,12 @@ Dependendo de sua localização, você pode ter os seguintes direitos relativame
 - **Direito ao apagamento:** Pode solicitar que eliminemos seus dados pessoais, sujeito a certas exceções.
 - **Direito à limitação:** Pode solicitar que limitemos o processamento de seus dados pessoais sob certas circunstâncias.
 - **Direito à portabilidade dos dados:** Pode solicitar uma transferência de seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
-- **Direito de retirar o consentimento:** Se nos baseamos em seu consentimento para processar seus dados, pode retirar esse consentimento a qualquer momento.
+- **Direito de retirar o consentimento:** Se nos baseamos em seu consentimento para processar seus dados, você pode retirar esse consentimento a qualquer momento.
+- **Direito de apresentar reclamação:** Você pode apresentar reclamação à sua autoridade local de proteção de dados. Em Portugal: CNPD (Comissão Nacional de Proteção de Dados).
 
-Para exercer qualquer um destes direitos, entre em contato conosco utilizando as informações fornecidas abaixo.
+**Prazos de resposta:** Respondemos em até 1 mês sob o GDPR (prorrogável por até 2 meses para solicitações complexas, com aviso) e em 15 dias sob a LGPD. Podemos solicitar informações para verificar sua identidade antes de atender à solicitação.
+
+**Como enviar sua solicitação:** Envie e-mail para privacy@eleva.care ou dpo@eleva.care com o tipo de solicitação, e-mail associado e idioma preferido. Você também pode contatar support@eleva.care.
 
 ## 6. Segurança de Seus Dados
 
@@ -112,9 +128,22 @@ Se estiver localizado fora de Portugal, esteja ciente de que seus dados pessoais
 
 Nossos serviços não se destinam a crianças com menos de 16 anos, e não coletamos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que coletamos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
 
+Para usuários brasileiros (LGPD): menores são aqueles com menos de 18 anos. Tratamos dados de menores apenas com o consentimento e participação de um dos pais ou responsável legal (LGPD Artigo 14). Pais/responsáveis podem contatar privacy@eleva.care para acessar ou solicitar a exclusão de dados de menores.
+
 ## 9. Alterações a Esta Política de Privacidade
 
 Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a revisar esta Política de Privacidade periodicamente para se manter informado sobre como estamos protegendo sua informação.
+
+## 10. Solicitações de Autoridades e Órgãos de Segurança
+
+Analisamos cuidadosamente e respondemos a solicitações governamentais e de órgãos de segurança para obtenção de dados de usuários. Nossos princípios são:
+
+- Exigimos uma solicitação válida e legalmente vinculante (p. ex., mandado judicial, intimação) antes de divulgar dados não públicos, salvo emergência que permita por lei.
+- Limitamos as divulgações ao mínimo necessário e contestamos solicitações excessivas, ilegais ou incompatíveis com o GDPR.
+- Quando a lei permitir, notificamos previamente os usuários/controladores afetados antes da divulgação, para que possam buscar medidas legais.
+- Mantemos registros internos e podemos fornecer informações de alto nível sobre como tratamos essas solicitações.
+
+Para mais detalhes sobre transferências internacionais e salvaguardas, consulte nosso Acordo de Processamento de Dados.
 
 ---
 
