--- a/content/privacy/en.mdx
+++ b/content/privacy/en.mdx
@@ -84,7 +84,20 @@ We do not sell, trade, or otherwise share your personal data with third parties 
 
 ## 4. Data Retention
 
-We will retain your personal data only for as long as necessary to fulfill the purposes outlined in this Privacy Policy, unless a longer retention period is required or permitted by law.
+We retain data only as long as necessary for the purposes described below or as required by law. Retention varies by data category:
+
+| Category                           | Purpose                                     | Typical Retention                                                                        |
+| ---------------------------------- | ------------------------------------------- | ---------------------------------------------------------------------------------------- |
+| Account data (name, email, phone)  | Provide and secure your account             | While account is active; if inactive: 12-month notice then deletion within 24 months     |
+| Booking and scheduling metadata    | Maintain booking history and resolve issues | 24 months after last activity (unless needed for legal obligations)                      |
+| Payment and invoicing records      | Compliance with tax and accounting laws     | Up to 10 years (statutory)                                                               |
+| Support communications             | Troubleshooting and audit trail             | 24 months after ticket closure                                                           |
+| Platform analytics                 | Improve product and reliability             | Up to 12 months (aggregated/anonymized thereafter)                                       |
+| Audit logs (security)              | Security investigations and compliance      | Minimum 12 months                                                                        |
+| Backups                            | Business continuity and disaster recovery   | ~30 days rolling encrypted backups                                                       |
+| Clinical data (notes, attachments) | Practitioner-controlled medical records     | Retained per practitioner’s instructions and applicable law (e.g., 10 years in Portugal) |
+
+For clinical data, the practitioner is the Data Controller and determines the retention period. We act as Processor and will delete or return data upon the practitioner's instruction or contract termination, consistent with our Data Processing Agreement.
 
 ## 5. Your Data Protection Rights
 
@@ -96,8 +109,11 @@ Depending on your location, you may have the following rights regarding your per
 - **Right to restriction:** You can request that we restrict the processing of your personal data under certain circumstances.
 - **Right to data portability:** You can request a transfer of your personal data to another organization in a structured, commonly used, and machine-readable format.
 - **Right to withdraw consent:** If we rely on your consent to process your data, you can withdraw that consent at any time.
+- **Right to lodge a complaint:** You have the right to lodge a complaint with your local supervisory authority. In Portugal: CNPD (Comissão Nacional de Proteção de Dados).
 
-To exercise any of these rights, please contact us using the information provided below.
+**Response timeframes:** We respond to requests within 1 month under GDPR (extendable by up to 2 additional months for complex requests, with notice) and within 15 days under LGPD. We may request information to verify your identity before fulfilling a request.
+
+**How to submit a request:** Email us at privacy@eleva.care or dpo@eleva.care with your request type, associated email, and preferred language. You can also contact support@eleva.care.
 
 ## 6. Security of Your Data
 
@@ -111,9 +127,22 @@ If you are located outside of Portugal, please be aware that your personal data 
 
 Our services are not intended for children under the age of 16, and we do not knowingly collect personal data from children. If we become aware that we have collected personal data from a child under 16 without verification of parental consent, we will take steps to remove that information.
 
+For Brazilian users (LGPD): minors are those under 18. We process minors’ data only with the consent and participation of a parent or legal guardian (LGPD Article 14). Parents/guardians may contact privacy@eleva.care to access or request deletion of minors’ data.
+
 ## 9. Changes to This Privacy Policy
 
 We may update this Privacy Policy from time to time. Any changes will be posted on this page with an updated effective date. We encourage you to review this Privacy Policy periodically to stay informed about how we are protecting your information.
+
+## 10. Law Enforcement and Government Requests
+
+We carefully review and respond to government and law enforcement requests for user data. Our principles are:
+
+- We require a valid and legally binding request (e.g., court order, subpoena) before disclosing any non-public data, unless an emergency legally permits disclosure.
+- We limit disclosures to the minimum data necessary and challenge requests that are overbroad, unlawful, or conflict with EU data protection law.
+- Where permitted by law, we provide advance notice to affected users/controllers before disclosure to allow them to seek legal remedies.
+- We publish high-level information about our handling of requests upon request and maintain internal records for accountability.
+
+For more details on international transfers and safeguards, see our Data Processing Agreement.
 
 ---
 
