--- a/content/privacy/es.mdx
+++ b/content/privacy/es.mdx
@@ -85,7 +85,20 @@ No vendemos, intercambiamos ni compartimos de otro modo sus datos personales con
 
 ## 4. Retención de Datos
 
-Retendremos sus datos personales solo durante el tiempo necesario para cumplir los propósitos descritos en esta Política de Privacidad, a menos que un período de retención más largo sea requerido o permitido por ley.
+Conservamos los datos solo durante el tiempo necesario para los fines descritos a continuación o según lo exija la ley. La retención varía por categoría de datos:
+
+| Categoría                             | Finalidad                                       | Plazo típico de conservación                                                                  |
+| ------------------------------------- | ----------------------------------------------- | --------------------------------------------------------------------------------------------- |
+| Datos de cuenta (nombre, email, tel.) | Proporcionar y asegurar su cuenta               | Mientras la cuenta esté activa; si está inactiva: aviso de 12 meses y eliminación en 24 meses |
+| Metadatos de reservas y programación  | Mantener historial y resolver incidencias       | 24 meses tras la última actividad (salvo obligaciones legales)                                |
+| Registros de pago y facturación       | Cumplimiento fiscal y contable                  | Hasta 10 años (legal)                                                                         |
+| Comunicaciones de soporte             | Resolución de incidencias y trazabilidad        | 24 meses tras el cierre del ticket                                                            |
+| Analítica de plataforma               | Mejorar producto y fiabilidad                   | Hasta 12 meses (luego agregado/anonimizado)                                                   |
+| Registros de auditoría (seguridad)    | Investigaciones de seguridad y cumplimiento     | Mínimo 12 meses                                                                               |
+| Copias de seguridad                   | Continuidad de negocio y recuperación           | ~30 días de copias cifradas en rotación                                                       |
+| Datos clínicos (notas, adjuntos)      | Historias clínicas bajo control del profesional | Según instrucciones del profesional y la ley aplicable (p. ej., 10 años en Portugal)          |
+
+Para los datos clínicos, el profesional es el Responsable del Tratamiento y determina el período de conservación. Nosotros actuamos como Encargado y eliminaremos o devolveremos los datos conforme a las instrucciones del profesional o a la terminación del contrato, de acuerdo con nuestro Acuerdo de Procesamiento de Datos.
 
 ## 5. Sus Derechos de Protección de Datos
 
@@ -97,8 +110,11 @@ Dependiendo de su ubicación, puede tener los siguientes derechos con respecto a
 - **Derecho a la limitación:** Puede solicitar que limitemos el procesamiento de sus datos personales bajo ciertas circunstancias.
 - **Derecho a la portabilidad de datos:** Puede solicitar una transferencia de sus datos personales a otra organización en un formato estructurado, de uso común y legible por máquina.
 - **Derecho a retirar el consentimiento:** Si nos basamos en su consentimiento para procesar sus datos, puede retirar ese consentimiento en cualquier momento.
+- **Derecho a presentar una reclamación:** Puede presentar una reclamación ante su autoridad de control local. En Portugal: CNPD (Comissão Nacional de Proteção de Dados).
 
-Para ejercer cualquiera de estos derechos, contáctenos utilizando la información proporcionada a continuación.
+**Plazos de respuesta:** Respondemos en un plazo de 1 mes según el RGPD (prorrogable hasta 2 meses adicionales para solicitudes complejas, con aviso) y en 15 días según la LGPD. Podemos solicitar información para verificar su identidad antes de atender la solicitud.
+
+**Cómo enviar su solicitud:** Escríbanos a privacy@eleva.care o dpo@eleva.care indicando el tipo de solicitud, el email asociado y su idioma preferido. También puede contactar a support@eleva.care.
 
 ## 6. Seguridad de Sus Datos
 
@@ -112,9 +128,22 @@ Si está ubicado fuera de Portugal, tenga en cuenta que sus datos personales pue
 
 Nuestros servicios no están destinados a niños menores de 16 años, y no recopilamos intencionalmente datos personales de niños. Si nos enteramos de que hemos recopilado datos personales de un niño menor de 16 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información.
 
+Para usuarios brasileños (LGPD): los menores son quienes tienen menos de 18 años. Tratamos datos de menores únicamente con el consentimiento y participación de un padre/madre o tutor legal (LGPD Artículo 14). Padres/tutores pueden contactar a privacy@eleva.care para acceder o solicitar la eliminación de los datos de menores.
+
 ## 9. Cambios a Esta Política de Privacidad
 
 Podemos actualizar esta Política de Privacidad periódicamente. Cualquier cambio será publicado en esta página con una fecha de vigencia actualizada. Le recomendamos revisar esta Política de Privacidad periódicamente para mantenerse informado sobre cómo estamos protegiendo su información.
+
+## 10. Solicitudes de Autoridades y Fuerzas del Orden
+
+Revisamos cuidadosamente y respondemos a solicitudes gubernamentales y de fuerzas del orden para obtener datos de usuarios. Nuestros principios son:
+
+- Requerimos una solicitud válida y legalmente vinculante (p. ej., orden judicial, citación) antes de divulgar datos no públicos, salvo emergencia que lo permita legalmente.
+- Limitamos las divulgaciones a los datos mínimos necesarios y cuestionamos solicitudes excesivas, ilegales o incompatibles con el RGPD.
+- Cuando la ley lo permita, avisamos previamente a los usuarios/responsables afectados antes de la divulgación, para que puedan ejercer recursos legales.
+- Mantenemos registros internos y podemos proporcionar información de alto nivel sobre cómo gestionamos estas solicitudes.
+
+Para más detalles sobre transferencias internacionales y salvaguardas, consulte nuestro Acuerdo de Procesamiento de Datos.
 
 ---
 
