--- a/content/privacy/pt.mdx
+++ b/content/privacy/pt.mdx
@@ -85,7 +85,20 @@ Não vendemos, trocamos ou partilhamos de outra forma os seus dados pessoais com
 
 ## 4. Retenção de Dados
 
-Reteremos os seus dados pessoais apenas pelo tempo necessário para cumprir os propósitos descritos nesta Política de Privacidade, a menos que um período de retenção mais longo seja exigido ou permitido por lei.
+Conservamos dados apenas pelo tempo necessário para os fins abaixo ou conforme exigido por lei. A retenção varia por categoria de dados:
+
+| Categoria                              | Finalidade                                     | Retenção Típica                                                                        |
+| -------------------------------------- | ---------------------------------------------- | -------------------------------------------------------------------------------------- |
+| Dados de conta (nome, email, telefone) | Fornecer e proteger a sua conta                | Enquanto a conta estiver ativa; se inativa: aviso de 12 meses e eliminação em 24 meses |
+| Metadados de marcações e agendamento   | Manter histórico e resolver incidências        | 24 meses após a última atividade (salvo obrigações legais)                             |
+| Registos de pagamento e faturação      | Cumprimento fiscal e contabilístico            | Até 10 anos (legal)                                                                    |
+| Comunicações de suporte                | Resolução de incidências e trilha de auditoria | 24 meses após o fecho do ticket                                                        |
+| Analítica de plataforma                | Melhorar produto e fiabilidade                 | Até 12 meses (depois agregado/anonimizado)                                             |
+| Registos de auditoria (segurança)      | Investigações de segurança e conformidade      | Mínimo 12 meses                                                                        |
+| Cópias de segurança                    | Continuidade de negócio e recuperação          | ~30 dias de cópias encriptadas em rotação                                              |
+| Dados clínicos (notas, anexos)         | Registos médicos sob controlo do profissional  | Conforme instruções do profissional e a lei aplicável (p. ex., 10 anos em Portugal)    |
+
+Para dados clínicos, o profissional é o Responsável pelo Tratamento e determina o período de retenção. Atuamos como Subcontratante e eliminaremos ou devolveremos os dados conforme instrução do profissional ou cessação do contrato, de acordo com o nosso Acordo de Processamento de Dados.
 
 ## 5. Os Seus Direitos de Proteção de Dados
 
@@ -97,8 +110,11 @@ Dependendo da sua localização, pode ter os seguintes direitos relativamente ao
 - **Direito à limitação:** Pode solicitar que limitemos o processamento dos seus dados pessoais sob certas circunstâncias.
 - **Direito à portabilidade dos dados:** Pode solicitar uma transferência dos seus dados pessoais para outra organização num formato estruturado, de uso comum e legível por máquina.
 - **Direito de retirar o consentimento:** Se nos baseamos no seu consentimento para processar os seus dados, pode retirar esse consentimento a qualquer momento.
+- **Direito de apresentar reclamação:** Pode apresentar reclamação junto da sua autoridade de controlo local. Em Portugal: CNPD (Comissão Nacional de Proteção de Dados).
 
-Para exercer qualquer um destes direitos, contacte-nos utilizando as informações fornecidas abaixo.
+**Prazos de resposta:** Respondemos no prazo de 1 mês ao abrigo do RGPD (prorrogável até 2 meses adicionais para pedidos complexos, com aviso) e em 15 dias ao abrigo da LGPD. Podemos solicitar informações para verificar a sua identidade antes de satisfazer o pedido.
+
+**Como enviar o seu pedido:** Envie email para privacy@eleva.care ou dpo@eleva.care indicando o tipo de pedido, o email associado e o idioma preferido. Também pode contactar support@eleva.care.
 
 ## 6. Segurança dos Seus Dados
 
@@ -112,9 +128,22 @@ Se estiver localizado fora de Portugal, esteja ciente de que os seus dados pesso
 
 Os nossos serviços não se destinam a crianças com menos de 16 anos, e não recolhemos intencionalmente dados pessoais de crianças. Se tomarmos conhecimento de que recolhemos dados pessoais de uma criança com menos de 16 anos sem verificação do consentimento parental, tomaremos medidas para remover essa informação.
 
+Para utilizadores brasileiros (LGPD): menores são aqueles com menos de 18 anos. Tratamos dados de menores apenas com o consentimento e participação de um dos pais ou tutor legal (LGPD Artigo 14). Pais/tutores podem contactar privacy@eleva.care para aceder ou solicitar a eliminação dos dados de menores.
+
 ## 9. Alterações a Esta Política de Privacidade
 
 Podemos atualizar esta Política de Privacidade periodicamente. Quaisquer alterações serão publicadas nesta página com uma data de vigência atualizada. Encorajamos a rever esta Política de Privacidade periodicamente para se manter informado sobre como estamos a proteger a sua informação.
+
+## 10. Pedidos de Autoridades e Forças da Ordem
+
+Analisamos cuidadosamente e respondemos a pedidos governamentais e das forças da ordem para obtenção de dados de utilizadores. Os nossos princípios são:
+
+- Exigimos um pedido válido e legalmente vinculativo (p. ex., mandado judicial, intimação) antes de divulgar dados não públicos, salvo emergência que o permita por lei.
+- Limitamos as divulgações ao mínimo necessário e contestamos pedidos excessivos, ilegais ou incompatíveis com o RGPD.
+- Quando a lei o permita, notificamos previamente os utilizadores/responsáveis afetados antes da divulgação, para que possam exercer meios legais.
+- Mantemos registos internos e podemos disponibilizar informação de alto nível sobre como tratamos estes pedidos.
+
+Para mais detalhes sobre transferências internacionais e salvaguardas, consulte o nosso Acordo de Processamento de Dados.
 
 ---
 
