--- a/content/security/en.mdx
+++ b/content/security/en.mdx
@@ -39,7 +39,7 @@ Our security posture is strengthened by our infrastructure providers' formal cer
 ✅ **ISO 27001-Aligned Security Practices**  
 Our information security management follows ISO 27001 principles and best practices, implemented across our development lifecycle, infrastructure, and operational procedures.
 
-For detailed compliance information, visit our [Data Processing Agreement](/legal/dpa).
+For detailed compliance information, visit our [Data Processing Agreement](/legal/dpa). We conduct Transfer Impact Assessments (TIAs) and implement supplementary measures aligned with Schrems II (EU‑based key management, least‑privilege access, government request challenge and notice policies) to mitigate cross‑border access risks when using EU‑hosted infrastructure from non‑EU vendors.
 
 ---
 
