--- a/content/security/es.mdx
+++ b/content/security/es.mdx
@@ -39,7 +39,7 @@ Nuestra postura de seguridad se fortalece con las certificaciones formales de nu
 ✅ **Prácticas de Seguridad Alineadas con ISO 27001**  
 Nuestra gestión de seguridad de la información sigue los principios y mejores prácticas de ISO 27001, implementados en todo nuestro ciclo de desarrollo, infraestructura y procedimientos operativos.
 
-Para información detallada sobre cumplimiento, visite nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa).
+Para información detallada sobre cumplimiento, visite nuestro [Acuerdo de Procesamiento de Datos](/legal/dpa). Realizamos Evaluaciones de Impacto de Transferencia (TIAs) y aplicamos medidas complementarias alineadas con Schrems II (gestión de claves en la UE, acceso de mínimo privilegio, políticas de notificación e impugnación de solicitudes gubernamentales) para mitigar riesgos de acceso transfronterizo al utilizar infraestructura alojada en la UE de proveedores no comunitarios.
 
 ---
 
