--- a/content/security/pt.mdx
+++ b/content/security/pt.mdx
@@ -39,7 +39,7 @@ A nossa postura de segurança é reforçada pelas certificações formais dos no
 ✅ **Práticas de Segurança Alinhadas com ISO 27001**  
 A nossa gestão de segurança da informação segue os princípios e melhores práticas da ISO 27001, implementados em todo o nosso ciclo de desenvolvimento, infraestrutura e procedimentos operacionais.
 
-Para informações detalhadas sobre conformidade, visite o nosso [Acordo de Processamento de Dados](/legal/dpa).
+Para informações detalhadas sobre conformidade, visite o nosso [Acordo de Processamento de Dados](/legal/dpa). Realizamos Avaliações de Impacto de Transferência (TIAs) e aplicamos medidas suplementares alinhadas com Schrems II (gestão de chaves na UE, acesso de menor privilégio, políticas de notificação e contestação de pedidos governamentais) para mitigar riscos de acesso transfronteiriço ao utilizar infraestrutura alojada na UE de fornecedores extra‑UE.
 
 ---
 
