--- a/content/terms/br.mdx
+++ b/content/terms/br.mdx
@@ -179,6 +179,14 @@ A Eleva.care reserva-se o direito de atualizar ou modificar estes Termos a qualq
 - **Divisibilidade:** Se qualquer disposição destes Termos for considerada inválida ou inaplicável, as restantes disposições permanecerão em vigor.
 - **Renúncia:** O não cumprimento de qualquer parte destes Termos não renuncia ao nosso direito de aplicar essas disposições no futuro.
 
+## 14. Direitos do Consumidor e Resolução Alternativa de Disputas (UE)
+
+Nada nestes Termos afeta direitos legais de consumidores que não podem ser renunciados conforme a lei aplicável. Se você é consumidor residente na UE/EEE, pode acessar a plataforma de Resolução de Disputas Online (ODR) da Comissão Europeia: https://ec.europa.eu/consumers/odr. Não somos obrigados nem nos comprometemos a utilizar entidades de ADR para resolver disputas de consumo, salvo quando exigido por lei.
+
+### Direito de Arrependimento
+
+Quando o direito de arrependimento da UE for aplicável a certos serviços não relacionados à saúde da plataforma, você poderá desistir em 14 dias, a menos que solicite expressamente a prestação imediata. Para serviços de saúde com data/hora específica prestados por profissionais independentes por meio da plataforma, o direito de arrependimento pode não se aplicar após o início do serviço ou para serviços agendados para data e hora determinadas, em conformidade com as isenções legais aplicáveis.
+
 ---
 
 ## Informação Legal
