--- a/content/terms/en.mdx
+++ b/content/terms/en.mdx
@@ -178,6 +178,14 @@ Eleva.care reserves the right to update or modify these Terms at any time. We wi
 - **Severability:** If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions will remain in effect.
 - **Waiver:** Failure to enforce any part of these Terms does not waive our right to enforce those provisions in the future.
 
+## 14. Consumer Rights and Alternative Dispute Resolution (EU)
+
+Nothing in these Terms affects statutory consumer rights that cannot be waived under applicable law. If you are a consumer residing in the EU/EEA, you may access the European Commission’s Online Dispute Resolution (ODR) platform for consumer disputes: https://ec.europa.eu/consumers/odr. We are not obliged and do not commit to use ADR entities to resolve consumer disputes unless required by law.
+
+### Right of Withdrawal
+
+Where the EU right of withdrawal applies to certain non-healthcare platform services, you may withdraw within 14 days unless you expressly request immediate performance. For time‑specific healthcare services provided by independent practitioners via the platform, the right of withdrawal may not apply once the service has begun or for services scheduled for a specific date and time, consistent with applicable consumer law exemptions.
+
 ---
 
 ## Legal Information
