--- a/content/terms/es.mdx
+++ b/content/terms/es.mdx
@@ -178,6 +178,14 @@ Eleva.care se reserva el derecho de actualizar o modificar estos Términos en cu
 - **Divisibilidad:** Si alguna disposición de estos Términos se considera inválida o inaplicable, las disposiciones restantes permanecerán en vigor.
 - **Renuncia:** El incumplimiento de hacer cumplir cualquier parte de estos Términos no renuncia a nuestro derecho de hacer cumplir esas disposiciones en el futuro.
 
+## 14. Derechos del Consumidor y Resolución Alternativa de Disputas (UE)
+
+Nada en estos Términos afecta los derechos legales de los consumidores que no pueden ser renunciados según la ley aplicable. Si usted es consumidor residente en la UE/EEE, puede acceder a la plataforma de Resolución de Disputas en Línea (ODR) de la Comisión Europea: https://ec.europa.eu/consumers/odr. No estamos obligados ni nos comprometemos a utilizar entidades de ADR para resolver disputas de consumidores salvo que la ley lo exija.
+
+### Derecho de Desistimiento
+
+Cuando sea aplicable el derecho de desistimiento de la UE a ciertos servicios no sanitarios de la plataforma, usted puede desistir en 14 días salvo que solicite expresamente la prestación inmediata. Para servicios sanitarios con fecha/hora específica prestados por profesionales independientes a través de la plataforma, el derecho de desistimiento puede no aplicar una vez iniciado el servicio o para servicios programados para una fecha y hora determinadas, conforme a las exenciones de consumo aplicables.
+
 ---
 
 ## Información Legal
