--- a/content/terms/pt.mdx
+++ b/content/terms/pt.mdx
@@ -178,6 +178,14 @@ A Eleva.care reserva-se o direito de atualizar ou modificar estes Termos a qualq
 - **Divisibilidade:** Se qualquer disposição destes Termos for considerada inválida ou inaplicável, as restantes disposições permanecerão em vigor.
 - **Renúncia:** O não cumprimento de qualquer parte destes Termos não renuncia ao nosso direito de aplicar essas disposições no futuro.
 
+## 14. Direitos do Consumidor e Resolução Alternativa de Litígios (UE)
+
+Nada nestes Termos afeta direitos legais de consumidores que não podem ser renunciados ao abrigo da lei aplicável. Se é consumidor residente na UE/EEE, pode aceder à plataforma de Resolução de Litígios em Linha (ODR) da Comissão Europeia: https://ec.europa.eu/consumers/odr. Não estamos obrigados nem nos comprometemos a utilizar entidades de ADR para resolver litígios de consumo salvo quando exigido por lei.
+
+### Direito de Livre Resolução
+
+Quando o direito de livre resolução da UE for aplicável a determinados serviços não clínicos da plataforma, pode desistir no prazo de 14 dias, salvo se solicitar expressamente a prestação imediata. Para serviços de saúde com data/hora específica prestados por profissionais independentes através da plataforma, o direito de livre resolução pode não ser aplicável após o início do serviço ou para serviços agendados para data e hora determinadas, em conformidade com as isenções legais aplicáveis.
+
 ---
 
 ## Informação Legal
