--- a/content/dpa/es.mdx
+++ b/content/dpa/es.mdx
@@ -170,6 +170,19 @@ Todos los datos personales e información de salud se almacenan y procesan exclu
 - Análisis: PostHog (alojamiento en la UE)
 - Notificaciones: Novu (endpoint de API en la UE: eu.api.novu.co)
 
+#### A.8.1 Evaluaciones de Impacto de Transferencia (TIAs) y Medidas Complementarias (Schrems II)
+
+Para abordar los riesgos identificados en C‑311/18 (Schrems II), Eleva.care realiza Evaluaciones de Impacto de Transferencia para cada proveedor listado e implementa medidas complementarias, incluyendo:
+
+- CCT (2021/914) Módulo 2 (Responsable→Encargado) con todos los proveedores no UE que ofrecen infraestructura alojada en la UE
+- Cifrado en tránsito (TLS 1.3) y en reposo (AES‑256‑GCM); las claves son gestionadas por Eleva.care dentro de la UE con controles de acceso estrictos
+- Principio de mínimo privilegio, RBAC y registro de auditoría integral del acceso administrativo
+- Política ante solicitudes gubernamentales: compromisos de (i) notificar a Eleva.care cuando sea legal, (ii) impugnar solicitudes ilegales o desproporcionadas y (iii) publicar informes de transparencia cuando aplique
+- Sin acceso remoto de soporte de proveedores salvo aprobaciones europeas, acotadas en el tiempo y registradas
+- Minimización de datos y seudonimización cuando sea viable para analítica y telemetría
+
+Se pueden proporcionar resúmenes de TIAs y de medidas técnicas/organizativas a responsables bajo solicitud razonable y acuerdo de confidencialidad.
+
 ### A.9 Cumplimiento con Regulaciones de Salud
 
 **Regulaciones de Datos de Salud de la UE (Primarias):**
