--- a/content/dpa/pt.mdx
+++ b/content/dpa/pt.mdx
@@ -170,6 +170,19 @@ Todos os dados pessoais e informações de saúde são armazenados e processados
 - Análise: PostHog (alojamento na UE)
 - Notificações: Novu (endpoint da API na UE: eu.api.novu.co)
 
+#### A.8.1 Avaliações de Impacto de Transferência (TIAs) e Medidas Suplementares (Schrems II)
+
+Para mitigar riscos identificados no processo C‑311/18 (Schrems II), a Eleva.care realiza Avaliações de Impacto de Transferência para cada fornecedor acima e implementa medidas suplementares, incluindo:
+
+- CCT (2021/914) Módulo 2 (Responsável→Subcontratante) com fornecedores extra-UE que fornecem infraestrutura alojada na UE
+- Encriptação em trânsito (TLS 1.3) e em repouso (AES‑256‑GCM); chaves geridas pela Eleva.care na UE com controlos de acesso estritos
+- Princípio do menor privilégio, RBAC e registo de auditoria abrangente do acesso administrativo
+- Política para pedidos governamentais: compromissos de (i) notificar a Eleva.care quando legal, (ii) contestar pedidos ilegais ou desproporcionais e (iii) publicar relatórios de transparência quando aplicável
+- Sem acesso remoto de suporte de fornecedores sem aprovações UE, limitadas no tempo e registadas
+- Minimização e pseudonimização de dados quando viável para analítica e telemetria
+
+Resumos de TIAs e medidas técnicas/organizativas podem ser fornecidos a responsáveis mediante pedido razoável e acordo de confidencialidade.
+
 ### A.9 Conformidade com Regulamentos de Saúde
 
 **Regulamentos de Dados de Saúde da UE (Primários):**
