--- a/content/security/br.mdx
+++ b/content/security/br.mdx
@@ -39,7 +39,7 @@ Nossa postura de segurança é fortalecida pelas certificações formais de noss
 ✅ **Práticas de Segurança Alinhadas com ISO 27001**  
 Nossa gestão de segurança da informação segue os princípios e melhores práticas da ISO 27001, implementados em todo nosso ciclo de desenvolvimento, infraestrutura e procedimentos operacionais.
 
-Para informações detalhadas sobre conformidade, visite nosso [Acordo de Processamento de Dados](/legal/dpa).
+Para informações detalhadas sobre conformidade, visite nosso [Acordo de Processamento de Dados](/legal/dpa). Realizamos Avaliações de Impacto de Transferência (TIAs) e aplicamos medidas suplementares alinhadas com Schrems II (gestão de chaves na UE, acesso de menor privilégio, políticas de notificação e contestação de solicitações governamentais) para mitigar riscos de acesso transfronteiriço ao utilizar infraestrutura hospedada na UE de provedores fora da UE.
 
 ---
 
